# robot-vacuum-roombas

./: README.md
demo/: welcome.cpp
opencv图像识别/识别三角形输出中心坐标/: CMakeLists.txt  模板匹配.cpp  轮廓检测.cpp
opencv图像识别/识别圆形输出中心坐标/: 霍夫圆变换.cpp
robot3i/devel/: .catkin  .rosinstall
robot3i/devel/include/cartographer_ros_msgs/: FinishTrajectoryRequest.h  FinishTrajectoryResponse.h  SubmapEntry.h  SubmapList.h  SubmapQueryRequest.h  SubmapQueryResponse.h  TrajectorySubmapList.h
robot3i/devel/lib/gmapping/: slam_gmapping  slam_gmapping_replay
robot3i/devel/lib/joy/: joy_node
robot3i/devel/lib/lidar_undistortion_2d/: lidar_undistortion_2d_node
robot3i/devel/lib/map_server/: map_saver  map_server  rtest
robot3i/devel/lib/pkgconfig/: cartographer_ros.pc  cartographer_rviz.pc  (+9 more)
robot3i/src/: .rosinstall
robot3i/src/myurdf/: CMakeLists.txt  package.xml  robot.urdf
robot3i/src/nav_demo/: package.xml
robot3i/src/robot3i/: CMakeLists.txt  README.md  robot_demo1.cpp  robot_demo2.cpp  robot_ros.cpp
robot3i/src/robot3i/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
robot3i/src/robot3i/include/: CommPacketV3.hpp  Lidar3I.hpp  LidarCommPacket.hpp  Motion3I.hpp  TCPSocketClient.hpp
robot3i/src/robot3i/launch/: move_base.launch  robot_ros.launch  slam_gmapping.launch
robot3i/src/robot3i/launch/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
robot3i/src/robot3i/src/: CommPacketV3.cpp  LidarCommPacket.cpp  TCPSocketClient.cpp
(+42 files in other folders)
